samples/_failures_safe/1761790763_c1da83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aaf6e720.c:158:17: error: expected declaration specifiers or ‘...’ at end of input
  158 | void bfs(struct Graph* graph,
      |                 ^~~~~
